...
          final response = await loginAccount();
          final decodedResponse = jsonDecode(response);
          loginLogger.info('decodedResponse: ${decodedResponse['data']}');
          AccountStore().setAccountState(decodedResponse['data']);
        }
      },
      child: Text('Login',
          style: TextStyle(color: Colors.white, fontWeight: FontWeight.bold)),
    );
  }

  TextButton redirectButton(context) {
    return TextButton(
...
