...
                          title: titleController.text,
                          description: descriptionController.text,
                        ),
                        todoItem.todo_id);
                    Navigator.of(context).pop();
                  },
                  child: const Text('save'))
            ],
          );
        });
  }

  void _deleteDialogue(BuildContext context) {
...
                    Navigator.of(context).pop();
                  },
                  style: ElevatedButton.styleFrom(
                    backgroundColor: Colors.redAccent,
                  ),
                  child: const Text(
                    'delete',
                    style: TextStyle(
                        color: Colors.white, fontWeight: FontWeight.w500),
                  ))
            ],
          );
        });
...
